# Physical-AI-Book

./: .env.example  .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
.specify/memory/: constitution.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/: __init__.py  api.py  chunker.py  config.py  embeddings.py  formatter.py  ingest.py  llm.py  logger.py  main.py  middleware.py  rag_pipeline.py  rerank.py  vector_db.py
backend/src/models/: __init__.py  chunk.py  requests.py  rerank.py  responses.py  search.py
backend/tests/: test_api.py  test_chunker.py  test_embeddings.py  test_ingest.py  test_rag_pipeline.py  test_rerank.py  test_vector_db.py
docs/week-01-02-intro/: intro.md  setup.md
docs/week-03-05-ros2/: nodes-topics.md  ros2-overview.md  urdf.md
docs/week-06-07-digital-twin/: gazebo-intro.md  unity-simulation.md
docs/week-08-10-isaac-sim/: isaac-intro.md
docs/week-11-13-vla/: vla-overview.md
docs/week-13-capstone/: capstone-overview.md
history/prompts/001-rag-openai-chatbot/: 001-create-rag-chatbot-spec.spec.prompt.md  002-plan-rag-chatbot-impl.plan.prompt.md  003-generate-implementation-tasks.tasks.prompt.md  004-clarify-spec-no-ambiguities.spec.prompt.md
history/prompts/002-floating-chat-bubble/: 001-create-floating-chat-bubble-spec.spec.prompt.md  002-clarify-spec-ambiguities.spec.prompt.md  003-create-implementation-plan.plan.prompt.md  004-generate-implementation-tasks.tasks.prompt.md  (+1 more)
specs/001-rag-openai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-floating-chat-bubble/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/rag-cohere-qdrant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/textbook-generation/: plan.md  spec.md  tasks.md
src/css/: chat.module.css  custom.css  floatingChat.module.css
src/hooks/: useStreamingChat.ts
src/pages/: chat.tsx  index.module.css  index.tsx
src/theme/: Root.tsx
src/types/: chat.ts
(+23 files in other folders)
